--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,7 +114,7 @@ hr {
     border: 2px dashed #d3d3d3;
     border-radius: 15px;
     height: 250px;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
     background-color: #3cc3b2;
 }
@@ -123,7 +123,7 @@ hr {
     border: 2px dashed #d3d3d3;
     border-radius: 15px;
     height: 125px;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
     background-color: #3cc3b2
 }
@@ -136,7 +136,7 @@ hr {
     border: 2px dashed #d3d3d3;
     border-radius: 15px;
     height: 250px;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
     background-color: #3cc3b2
 }
@@ -145,7 +145,7 @@ hr {
     border: 2px dashed #d3d3d3;
     border-radius: 15px;
     height: 125px;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
     background-color: #3cc3b2
 }
@@ -181,7 +181,6 @@ hr {
         order: 2;
     }
     .score-container {
-        display: inline-flexbox;
         order: 3;
         height: 500px;
     }
